--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "d3": "~3.5.5",
     "async": "~1.2.1",
     "techan": "~0.5.0",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "typeahead.js": "~0.11.1"
   }
 }
